--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-hello world
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css">
+    </head>
+    <body>
+        <div class="pure-g">
+            <div class="pure-u-1-3"></div>
+            <div class="pure-u-1-3">
+                <h1>QRAM</h1>
+                <p>
+                    Qram stands for "Queued Rebase and Merge" and rhymes nicely with "cram", nudging you to work more on
+                    meaningful things and leave cramming commits into neat chains to robots.
+                </p>
+                <p>
+                    Much like Gitlab's
+                    <a href="https://docs.gitlab.com/ee/ci/pipelines/merge_trains.html">Merge trains</a>
+                    and Github's recently introduced
+                    <a href="https://github.blog/changelog/2023-02-08-pull-request-merge-queue-public-beta/">Merge queues</a>,
+                    Qram strives to provide a solution for testing multiple PRs in conjunction to
+                    detect conflicts, but targets a specific opinionated workflow:
+                    <ul>
+                        <li>commit history in PRs matter, so they get merged and not squashed;</li>
+                        <li>linear history in main branch matters too, so PRs have to be rebased
+                            on top of each other.</li>
+                    </ul>
+                </p>
+                <h2> coming <s>soon</s> eventually </h2>
+                </p>
+            </div>
+            <div class="pure-u-1-3"></div>
+        </div>
+    </body>
+</html>
